--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-checkbox": "~2.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "expo-checkbox": "~2.0.0"
+    "react-native-selectmultiple-button": "^0.1.105",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
